feature: ended regitration and login

--- a/expenses/templates/expenses/home.html
+++ b/expenses/templates/expenses/home.html
@@ -5,5 +5,13 @@
 {% block content%}
 <p>
     home
+
+    
+    {% if user %}
+        <p>Hello {{user.username}}!</p>
+    {% else %}
+        <p>You are not logged in</p>
+    {% endif %}
+        
 </p>
 {% endblock %}
