--- a/expenses/templates/expenses/base.html
+++ b/expenses/templates/expenses/base.html
@@ -1,13 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    {% block head %}
-    {% endblock %}
-</head>
-<body>
-    {% block content %}
-    {% endblock %}
-</body>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap"
+          rel="stylesheet">
+    {% block head %}{% endblock %}
+    <title>test</title>
+    <style>
+      *, *:before, *:after {
+        box-sizing: border-box;
+      }
+      body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+        background-color: #f4f4f4;
+      }
+    </style>
+  </head>
+  <body>
+    {% include "expenses/partials/header.html" %}
+    <main>
+      {% block content %}{% endblock %}
+    </main>
+  </body>
 </html>
