--- a/expenses/templates/expenses/pages/home.html
+++ b/expenses/templates/expenses/pages/home.html
@@ -1,4 +1,4 @@
-{% extends 'expenses/base.html' %}
+{% extends 'expenses/pages/base.html' %}
 {% block head %}{% endblock %}
 {% block content %}
     <p>
