--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,4 +1,4 @@
-{% extends "expenses/base.html" %}
+{% extends "expenses/pages/../../../expenses/templates/expenses/base.html" %}
 {% block head %}
 {% endblock head %}
 {% block content %}
