--- a/users/templates/users/registration.html
+++ b/users/templates/users/registration.html
@@ -1,4 +1,4 @@
-{% extends "expenses/base.html" %}
+{% extends "expenses/pages/../../../expenses/templates/expenses/base.html" %}
 
 {% block content %}
 <h2>Регистрация</h2>
