--- a/expenses/templates/expenses/transaction_management/transactions_list.html
+++ b/expenses/templates/expenses/transaction_management/transactions_list.html
@@ -19,6 +19,7 @@
         <p>You're only seeing <strong>completed</strong> transactions.</p>
         <a href="?show_all=true">Show all</a>
     {% endif %}
+        <a href="{% url 'create_transaction' %}">Create new </a>
     <table>
         <tr>
             {% for transaction in object %}
