--- a/expenses/templates/expenses/profile/categories/update.html
+++ b/expenses/templates/expenses/profile/categories/update.html
@@ -3,11 +3,11 @@
 {% endblock %}
 
 {% block content %}
-<h1>Create Category</h1>
+<h1>Update Category</h1>
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Create</button>
+    <button type="submit">Update</button>
 </form>
 
 <a href="{% url 'categories' %}">Back to categories list</a>
