--- a/expenses/templates/expenses/home.html
+++ b/expenses/templates/expenses/home.html
@@ -6,7 +6,7 @@
         {% if user %}
             <p>Hello {{ user.username }}!</p>
             <p>Current Balance</p>
-            <p> {{ transactions.calculate_balance }} </p>
+            <p> {{ balance }} </p>
             <a href="{% url 'transactions_list' %}">Transaction List</a>
         {% else %}
             <p>You are not logged in</p>
